--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </noscript>
 
     <!-- Site styles -->
-    <link href="css/styles.min.css" rel="stylesheet">
-    <link href="css/nav-overrides.css" rel="stylesheet">
+    <link href="css/styles.min.css?v=20240512" rel="stylesheet">
+    <link href="css/nav-overrides.css?v=20240512" rel="stylesheet">
 
     <!-- favicon assets -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
