--- a/index.html
+++ b/index.html
@@ -441,6 +441,6 @@
         </footer>
         <div id="footerNavPortal" class="footer-nav-portal"></div>
     </div>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js?v=20240512"></script>
 </body>
 </html>
